[project]
name = "JLS_PM"
version = "0.0.1"
description = "Package Manager to load and unload your DCC Pipeline tools"
requires-python = ">=3.8"

license = { file = "LICENSE.md" }
readme = "README.md"

author = "Jody L. Stocks"
maintainer = "Jody L. Stocks
copyright = "Copyright 2023, JLS: Package Manager"



classifiers = [
    "Development Status :: Early Development",
    "Programming Language :: Python"
]

dependencies = [
    gui = "PySide6"
]
